logs/pyhcup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyHCUP-0.1.6.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhcup'...
Listing './lib/python3.5/site-packages/pyhcup/data'...
Listing './lib/python3.5/site-packages/pyhcup/data/loadfiles'...
Listing './lib/python3.5/site-packages/pyhcup/data/loadfiles/hcup'...
Listing './lib/python3.5/site-packages/pyhcup/data/loadfiles/tx_pudf'...
Listing './lib/python3.5/site-packages/pyhcup/data/maps'...
Listing './lib/python3.5/site-packages/pyhcup/data/summary_stats'...
Listing './lib/python3.5/site-packages/pyhcup/data/uflags'...
Compiling './lib/python3.5/site-packages/pyhcup/sas.py'...
***   File "./lib/python3.5/site-packages/pyhcup/sas.py", line 97
    print "WARNING: pyhcup.sas.df_from_sas() is deprecated and is scheduled for removal in pyhcup 0.1.6; use pyhcup.parser.read()"
                                                                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
